--- a/ch1.html
+++ b/ch1.html
@@ -5,7 +5,6 @@
     <link rel="shortcut icon" href="/simbol.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>체크체크 중학 수학 1-1 답지</title>
-    <meta name="description" content="체크체크 중학 수학 1-1 답지 | Jungdapi">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -104,7 +103,7 @@
             border-radius: 5px;
             background-color: transparent;
             cursor: pointer;
-            transition:  color 0.3s ease;
+            transition: color 0.3s ease;
             z-index: 10;
             color: #000;
             text-decoration: none;
@@ -112,163 +111,28 @@
             align-items: center;
         }
         .go-back-button:hover {
-             color: #333;
+            color: #333;
         }
         .go-back-button span {
             margin-right: 5px;
         }
-        #download-status {
-            margin-top: 10px;
-            font-size: 0.9em;
-            color: #333;
-            transition: color 0.3s ease;
-        }
-
-        /* Improved Popup Styles */
-        #download-popup {
-            position: fixed;
-            top: -50px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: #fff;
-            color: #333;
-            padding: 15px 25px;
-            border-radius: 10px;
-            z-index: 1000;
-            opacity: 0;
-            transition: opacity 0.3s ease, top 0.3s ease, box-shadow 0.3s ease;
-            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
-            border: 1px solid #ddd;
-            display: none;
-        }
-
-        #download-popup.show {
-            display: block;
-            opacity: 1;
-            top: 60px;
-            animation: slideIn 0.3s ease forwards;
-        }
-
-        #download-popup.hide {
-            opacity: 0;
-            top: -50px;
-            animation: slideOut 0.3s ease forwards;
-            display: none;
-        }
-
-        #download-popup p {
-            margin: 0;
-            font-size: 1.1em;
-            font-weight: 500;
-            color: #222;
-            transition: color 0.2s ease;
-        }
-
-        #download-popup.success {
-            background-color: #f0fdf4;
-            border-color: #d6f4e5;
-            color: #15803d;
-        }
-
-        #download-popup.success p {
-            color: #15803d;
-        }
-
-        #download-popup.error {
-            background-color: #fef2f2;
-            border-color: #fecaca;
-            color: #b91c1c;
-        }
-
-        #download-popup.error p {
-            color: #b91c1c;
-        }
-
-        /* Progress Bar Styles */
-        #download-progress-bar {
-            width: 0%;
-            height: 10px;
-            background-color: #007bff;
-            border-radius: 5px;
-            transition: width 0.1s ease;
-            margin-top: 5px;
-            display: none;
-        }
-
-        #download-popup.progress #download-progress-bar {
-            width: 0%;
-            display: block;
-        }
-
-        @keyframes slideIn {
-            from {
-                top: -50px;
-                opacity: 0;
+        @media (max-width: 768px) {
+            .book-cover {
+                width: 90%;
+                max-width: 300px;
             }
-            to {
-                top: 60px;
-                opacity: 1;
+            .book-description {
+                text-align: center;
             }
-        }
-
-        @keyframes slideOut {
-            from {
-                top: 60px;
-                opacity: 1;
+            .button-container {
+                flex-direction: column;
+                align-items: stretch;
             }
-            to {
-                top: -50px;
-                opacity: 0;
+            .view-button, .download-button {
+                width: 100%;
             }
         }
     </style>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const body = document.body;
-            const bookSection = document.querySelector('.book-section');
-            const bookTitle = document.querySelector('.book-title');
-            const bookDescription = document.querySelector('.book-description');
-            const viewButton = document.querySelector('.view-button');
-            const downloadButton = document.querySelector('.download-button');
-            const goBackButton = document.querySelector('.go-back-button');
-
-            // 팝업 요소를 생성합니다.
-            const downloadPopup = document.createElement('div');
-            downloadPopup.id = 'download-popup';
-            document.body.appendChild(downloadPopup);
-
-            viewButton.addEventListener('click', () => {
-                window.open('https://drive.google.com/file/d/1GHBNhFzaldjPhdWN36KVsmYcQ-n9bMBp/view?usp=sharing', '_blank');
-            });
-
-            downloadButton.addEventListener('click', () => {
-                const downloadUrl = 'https://drive.usercontent.google.com/uc?id=1GHBNhFzaldjPhdWN36KVsmYcQ-n9bMBp&export=download';
-
-                downloadPopup.textContent = '다운로드 중...';
-                downloadPopup.classList.add('show');
-
-                // Initiate download
-                window.location.href = downloadUrl;
-
-                setTimeout(() => {
-                    downloadPopup.textContent = '다운로드 완료!';
-                    downloadPopup.classList.remove('progress');
-                    downloadPopup.classList.add('success');
-                    setTimeout(() => {
-                        downloadPopup.classList.remove('show', 'success');
-                        downloadPopup.classList.add('hide');
-                        setTimeout(() => {
-                            downloadPopup.remove();
-                        }, 300);
-                    }, 2000);
-                }, 3000);
-            });
-
-            goBackButton.addEventListener('click', () => {
-                window.history.back();
-            });
-        });
-    </script>
 </head>
 <body>
     <a href="index.html" class="go-back-button">
@@ -280,12 +144,36 @@
             <img src="https://i.postimg.cc/Vk1P8sjc/image.jpg" alt="체크체크 중학 수학 1-1" class="book-cover">
             <h3 class="book-title">체크체크 중학 수학 1-1</h3>
             <p class="book-description">
-                 간결한 개념 설명과 세분화된 유형별 문제 제공, 심화 단계로 넘어가기 전 중학교 수학 기본기를 탄탄하게 완성할 수 있는 기본서!
+                간결한 개념 설명과 세분화된 유형별 문제 제공, 심화 단계로 넘어가기 전 중학교 수학 기본기를 탄탄하게 완성할 수 있는 기본서!
+            </p>
         </div>
         <div class="button-container">
             <button class="view-button">웹에서 보기</button>
             <button class="download-button">다운로드</button>
         </div>
     </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const viewButton = document.querySelector('.view-button');
+            const downloadButton = document.querySelector('.download-button');
+            const goBackButton = document.querySelector('.go-back-button');
+
+            viewButton.addEventListener('click', () => {
+                window.open('https://drive.google.com/file/d/1GHBNhFzaldjPhdWN36KVsmYcQ-n9bMBp/view?usp=sharing', '_blank');
+            });
+
+            downloadButton.addEventListener('click', () => {
+                // 다운로드 링크를 직접 지정합니다.
+                const downloadUrl = 'https://drive.usercontent.google.com/uc?id=1GHBNhFzaldjPhdWN36KVsmYcQ-n9bMBp&export=download';
+                // 현재 창에서 다운로드 링크로 이동하여 다운로드를 시작합니다.
+                window.location.href = downloadUrl;
+            });
+
+            goBackButton.addEventListener('click', () => {
+                window.history.back();
+            });
+        });
+    </script>
 </body>
 </html>
