--- a/index.html
+++ b/index.html
@@ -515,10 +515,10 @@
                     description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
-                    title: '2024 물리 답지',
-                    link: 'https://www.6.com',
-                    imgSrc: '/answer3.jpg',
-                    description: '2024 물리 정답',
+                    title: '중간고사 대비 수학만 기출문제집 중학 수학 1-1',
+                    link: 'https://jungdapi.netlify.app/suman',
+                    imgSrc: 'https://i.postimg.cc/3wJ5scrv/XL-4.jpg',
+                    description: '클릭하여 답지를 다운로드 하세요.',
                 },
 
 
