--- a/search.html
+++ b/search.html
@@ -414,6 +414,15 @@
                 grade: '전체 학년',
                 semester: '전체 학기',
             },
+            {
+                title: '중간고사 대비 수학만 기출문제집 중학 수학 1-1',
+                link: 'https://jungdapi.netlify.app/suman',
+                imgSrc: 'https://i.postimg.cc/3wJ5scrv/XL-4.jpg',
+                description: '클릭하여 답지를 다운로드 하세요.',
+                school: '중등',
+                grade: '1학년',
+                semester: '1학기',
+            },
             
         ];
 
