--- a/index.html
+++ b/index.html
@@ -956,15 +956,12 @@
 <body>
     <div id="popup">
         <div id="popup-content">
-            <h2 id="popup-title">Jungdapi 서비스 종료 안내</h2>
+            <h2 id="popup-title">Jungdapi AI 출시 안내</h2>
             <p id="popup-text">
-                Jungdapi를 사랑해주신 소중한 고객 여러분께,<br><br>
-                그동안 저희 Jungdapi에 보내주신 따뜻한 관심과 끊임없는 성원에 진심으로 머리 숙여 감사드립니다. 여러분의 응원과 격려 덕분에 Jungdapi는 수많은 질문에 귀 기울이고, 함께 지식을 나누며 성장해 올 수 있었습니다.<br><br>
-                하지만, 깊은 고뇌와 숙고 끝에 모든 프리미엄 서비스가 갱신되는 오는 2025년 5월 30일을 마지막으로 Jungdapi 서비스의 문을 닫게 되었습니다.<br><br>
-                때로는 명쾌한 해답을, 때로는 따뜻한 위로를 전하고자 했던 Jungdapi는 이제 여러분의 곁을 떠나지만, 저희의 마음속에는 함께했던 소중한 시간들이 영원히 기억될 것입니다. 여러분의 질문 하나하나, Jungdapi를 통해 얻으셨던 작은 깨달음들이 저희에게는 큰 보람이자 기쁨이었습니다.<br><br>
-                갑작스러운 서비스 종료 소식에 실망하셨을 고객님들의 마음을 헤아리며, 저희 또한 안타까운 마음 금할 길이 없습니다. 그동안 Jungdapi를 믿고 이용해 주신 모든 분들께 진심으로 감사드립니다. 여러분이 보내주신 사랑은 저희에게 큰 힘이 되었습니다.<br><br>
-                비록 Jungdapi 서비스는 종료되지만, 저희는 이 경험을 바탕으로 더욱 발전된 모습으로 다시 찾아뵐 수 있도록 노력하겠습니다.<br><br>
-                -Jungdapi 개발자 강기훈 드림.
+                최신 모델을 사용한 Jungdapi AI가 출시되었습니다.<br><br>
+                Jubgdapi AI는 최신형 OCR 기술로 사진 문제풀이 서비스, 또한 4o수준의 글쓰기 실력으로 과제를 도와줍니다.<br><br>
+                Jungdapi AI의 가격은 PLUS 3900원/월 PREMIUM 9800원/월로 책정될 예정입니다.<br><br>
+                감사합니다.
             </p>
             <div id="popup-buttons">
                 <label id="popup-today-close">
